--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,110 @@
-h1{
-  border-color: #d3e644;
-  border-style: dashed;
+/* General Styles */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f2f5;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #333;
+}
+
+h1 {
+    color: #333;
+    margin-top: 20px;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+/* Buttons */
+button {
+    background-color: #4f4caf;
+    font-size: 1rem;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+button:hover {
+        background-color: #fb8c00;
+        transform: scale(1.05);
+}
+
+#load-items {
+    color: white;
+    margin-top: 20px;
+}
+
+#add-item {
+    color: white;
+    margin-top: 10px;
+    width: 25%;
+}
+
+.delete-btn {
+    background-color: #4f4caf;
+    color: white;
+}
+
+#toggle-table {
+    color: white;
+    margin-top: 20px;
+    font-size: 1rem;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+/* Table Styles */
+table {
+    border-collapse: collapse;
+    border-radius: 8px;
+    width: 80%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+th, td {
+    text-align: center;
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #4f4caf;
+    color: white;
+}
+
+tr:hover {
+    background-color: #f1f1f1;
+}
+
+
+/* Form Section */
+#new-item {
+    margin-top: 30px;
+    width: 80%;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+
+#new-item input[type=text] {
+    width: calc(30% - 10px);
+    padding: 10px;
+    margin: 10px 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#new-item input[type=text]:focus {
+    outline: none;
+    border-color: #4CAF50;
 }
